Kubernetes/coursecatalogservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursecatalogservice-deployment
  labels:
    app: coursecatalogservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coursecatalogservice
  template:
    metadata:
      labels:
        app: coursecatalogservice
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
      - name: acr-secret
      containers:
        - name: coursecatalogservice
          image: Containermicroservicio.azurecr.io/coursecatalogservice:vR
          ports:
            - containerPort: 80
