Kubernetes/emailservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice-deployment
  labels:
    app: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
      - name: acr-secret
      containers:
        - name: emailservice
          image: Containermicroservicio.azurecr.io/emailservice:vR
          ports:
            - containerPort: 80
