Kubernetes/paymentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-deployment
  labels:
    app: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
      - name: acr-secret
      containers:
        - name: paymentservice
          image: Containermicroservicio.azurecr.io/paymentservice:vR # <-- Asegúrate de usar un nuevo tag aquí 
          ports:
            - containerPort: 80
