Kubernetes/reviewservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewservice-deployment
  labels:
    app: reviewservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviewservice
  template:
    metadata:
      labels:
        app: reviewservice
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      imagePullSecrets:
      - name: acr-secret
      containers:
        - name: reviewservice
          image: Containermicroservicio.azurecr.io/reviewservice:vR
          ports:
            - containerPort: 80
