Kubernetes/authenticationservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authenticationservice-service
spec:
  type: ClusterIP
  selector:
    app: authenticationservice # Debe coincidir con el "label" del deploymnt
  ports:
    - protocol: TCP
      port: 80 # El puerto del LoadBalancer
      targetPort: 80 # El puerto del contenedor que escucha el tráfico
