Kubernetes/paymentservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-service
spec:
  type: LoadBalancer # Expone el servicio al exterior para poder procesar pagos
  selector:
    app: paymentservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
